add all the tasks

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="title removable editable">Product Backlog</div>
     <div class="content">
       <div class="card removable editable">Update Driver app with map</div>
-      <div class="card removable editable">Buy sensor to seats</div>
-      <div class="card removable editable"></div>
-      <div class="card removable editable"></div>
-      <div class="card removable editable"></div>
+      <div class="card removable editable">Update Passeger app with live monitoring</div>
+      <div class="card removable editable">New payment method</div>
+      <div class="card removable editable">Launch the Passeger app</div>
+      <div class="card removable editable">Launch the Where is my bus Web Site</div>
     </div>
     <div class="add-card editable">Add another card</div>
   </div>
@@ -24,6 +24,9 @@
     <div class="title removable editable">Current Sprint Backlog</div>
     <div class="content">
       <div class="card removable editable">Develop system to count people on the bus</div>
+      <div class="card removable editable">Launch the new bus</div>
+      <div class="card removable editable">Drivers trainer</div>
+      <div class="card removable editable">Get Feedback </div>
     </div>
     <div class="add-card editable">Add another card</div>
   </div>
@@ -32,6 +35,8 @@
     <div class="content"></div>
     <div class="card removable editable">Add sensor on the doors</div>
     <div class="card removable editable">Add more cctv</div>
+    <div class="card removable editable">Develop live monitoring bus</div>
+    <div class="card removable editable">Add language choices for driver</div>
 
     <div class="add-card editable">Add another card</div>
   </div>
@@ -50,14 +55,8 @@
   <div class="content"></div>
   <div class="card removable editable">Design passager app</div>
   <div class="card removable editable">Design Driver panel</div>
-  <div class="card removable editable">Develop Bus stop </div>
-  <div class="card removable editable"></div>
-  <div class="add-card editable">Add another card</div>
-</div>
-</div>
-<div class="list">
-  <div class="title removable editable">Additional Resources</div>
-  <div class="content"></div>
+  <div class="card removable editable">Develop Bus stop with capacity of the bus </div>
+  <div class="card removable editable">Design new display information of the bus</div>
   <div class="add-card editable">Add another card</div>
 </div>
 </div>
