--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Trello Clone</title>
+ 
   <link rel="stylesheet" href="./style.css">
+  
 
 </head>
 <body>
@@ -40,30 +42,32 @@
 
     <div class="add-card editable">Add another card</div>
   </div>
-</div>
-<div class="list">
-  <div class="title removable editable">Review</div>
-  <div class="content"></div>
-  <div class="card removable editable">Develop seat sensor</div>
-  <div class="card removable editable">Develop disabled seat sensor</div>
-  <div class="card removable editable">Design Driver app</div>
-  <div class="add-card editable">Add another card</div>
-</div>
-</div>
-<div class="list">
-  <div class="title removable editable">Done</div>
-  <div class="content"></div>
-  <div class="card removable editable">Design passager app</div>
-  <div class="card removable editable">Design Driver panel</div>
-  <div class="card removable editable">Develop Bus stop with capacity of the bus </div>
-  <div class="card removable editable">Design new display information of the bus</div>
-  <div class="add-card editable">Add another card</div>
-</div>
+  <div class="list">
+    <div class="title removable editable">Review</div>
+    <div class="content"></div>
+    <div class="card removable editable">Develop seat sensor</div>
+    <div class="card removable editable">Develop disabled seat sensor</div>
+    <div class="card removable editable">Design Driver app</div>
+    <div class="card removable editable">Fix bug on app</div>
+    <div class="add-card editable">Add another card</div>
+  </div>
+  
+  <div class="list">
+    <div class="title removable editable">Done</div>
+    <div class="content"></div>
+    <div class="card removable editable">Design passager app</div>
+    <div class="card removable editable">Design Driver panel</div>
+    <div class="card removable editable">Develop Bus stop with capacity of the bus </div>
+    <div class="card removable editable">Design new display information of the bus</div>
+    <div class="add-card editable">Add another card</div>
+  </div>
+
+  
+  <div class="add-list">
+    <div class="title editable">Add another list</div>
+  </div>
 </div>
 
-<div class="add-list">
-  <div class="title editable">Add another list</div>
-</div>
 <!-- partial -->
   <script src='https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js'></script><script  src="./script.js"></script>
 
