adding icons and update the css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Trello Clone</title>
- 
+  <script src="https://kit.fontawesome.com/4d3ecfb0ff.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./style.css">
   
 
@@ -12,6 +12,7 @@
 <!-- partial:index.partial.html -->
 <div id="main">
   <div class="list">
+    <i class="fa-brands fa-lastfm-square"></i> 
     <div class="title removable editable">Product Backlog</div>
     <div class="content">
       <div class="card removable editable">Update Driver app with map</div>
@@ -23,6 +24,7 @@
     <div class="add-card editable">Add another card</div>
   </div>
   <div class="list">
+    <i class="fa-regular fa-toolbox"></i>
     <div class="title removable editable">Current Sprint Backlog</div>
     <div class="content">
       <div class="card removable editable">Develop system to count people on the bus</div>
@@ -33,6 +35,7 @@
     <div class="add-card editable">Add another card</div>
   </div>
   <div class="list">
+    <i class="fa-regular fa-hourglass"></i>
     <div class="title removable editable">In Progress</div>
     <div class="content"></div>
     <div class="card removable editable">Add sensor on the doors</div>
@@ -43,6 +46,7 @@
     <div class="add-card editable">Add another card</div>
   </div>
   <div class="list">
+    <i class="fa-solid fa-arrows-rotate"></i>
     <div class="title removable editable">Review</div>
     <div class="content"></div>
     <div class="card removable editable">Develop seat sensor</div>
@@ -53,6 +57,7 @@
   </div>
   
   <div class="list">
+    <i class="fa-solid fa-circle-check"></i>
     <div class="title removable editable">Done</div>
     <div class="content"></div>
     <div class="card removable editable">Design passager app</div>
