--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="add-card editable">Add another card</div>
   </div>
   <div class="list">
-    <i class="fa-regular fa-toolbox"></i>
+    <i class="fa-brands fa-gg"></i>
     <div class="title removable editable">Current Sprint Backlog</div>
     <div class="content">
       <div class="card removable editable">Develop system to count people on the bus</div>
