--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
     <div class="card removable editable">Design new display information of the bus</div>
     <div class="add-card editable">Add another card</div>
   </div>
-
+  <div class="list">
+    <i class="fa-regular fa-square-plus"></i>
+    <div class="title removable editable">Additional Resources</div>
+    <div class="content"></div>
+    <div class="add-card editable">Add another card</div>
+  </div>
   
   <div class="add-list">
     <div class="title editable">Add another list</div>
