--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <title>CodePen - Trello Clone</title>
   <script src="https://kit.fontawesome.com/4d3ecfb0ff.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
   
 
 </head>
@@ -78,8 +81,17 @@
   </div>
 </div>
 
-<!-- partial -->
-  <script src='https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js'></script><script  src="./script.js"></script>
 
+  <!-- partial -->
+  <script src='https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js'></script><script  src="./script.js"></script>
+  <footer>
+    <p>
+      <a href="https://jigsaw.w3.org/css-validator/validator">
+          <img style="border:0;width:88px;height:31px"
+              src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+              alt="Valid CSS!" />
+        </a>
+    </p>
+  </footer>
 </body>
 </html>
